modernize recipe service portfolio app